erDiagram

    USER ||--o{ ORDER : places
    ORDER ||--|{ ORDER_ITEM : contains
    BOOK ||--o{ ORDER_ITEM : included_in

    ORDER ||--o{ PAYMENT : has
    ORDER ||--|| ADDRESS : shipped_to

    USER ||--o{ REVIEW : writes
    BOOK ||--o{ REVIEW : receives

    BOOK }o--o{ AUTHOR : written_by
    BOOK }o--|| PUBLISHER : published_by
    BOOK }o--o{ CATEGORY : categorized_as

    USER ||--|| CART : owns
    CART ||--|{ CART_ITEM : contains
    BOOK ||--o{ CART_ITEM : added_to

    ORDER ||--o{ COUPON : uses

    BOOK ||--o{ BOOK_IMAGE : has
    BOOK ||--o{ INVENTORY_LOG : tracked_by

    USER }o--o{ ROLE : has
    ROLE }o--o{ PERMISSION : grants

    USER ||--o{ USER_ROLE : assigned
    ROLE ||--o{ USER_ROLE : included_in

    ROLE ||--o{ ROLE_PERMISSION : assigned
    PERMISSION ||--o{ ROLE_PERMISSION : included_in

    BOOK ||--o{ BOOK_AUTHOR : linked
    AUTHOR ||--o{ BOOK_AUTHOR : linked

    BOOK ||--o{ BOOK_CATEGORY : linked
    CATEGORY ||--o{ BOOK_CATEGORY : linked

    ORDER ||--o{ ORDER_COUPON : linked
    COUPON ||--o{ ORDER_COUPON : linked

    USER {
        Long id
        String first_name
        String last_name
        String email
        String password
        String username
        String phone
        Date registration_date
        Date created_at
    }

    ROLE {
        Long id
        String name
    }

    PERMISSION {
        Long id
        String name
        String description
    }

    USER_ROLE {
        Long user_id
        Long role_id
    }

    ROLE_PERMISSION {
        Long role_id
        Long permission_id
    }

    AUTHOR {
        Long id
        String first_name
        String last_name
        String biography
    }

    BOOK_AUTHOR {
        Long book_id
        Long author_id
    }

    PUBLISHER {
        Long id
        String name
        String city
        String country
    }

    CATEGORY {
        Long id
        String name
        String description
    }

    BOOK_CATEGORY {
        Long book_id
        Long category_id
    }

    BOOK {
        Long id
        String title
        String isbn
        Integer publication_year
        Double price
        Integer stock_quantity
        String description
        Long publisher_id
        Date created_at
        Date updated_at
    }

    BOOK_IMAGE {
        Long id
        Long book_id
        String url
        Boolean is_primary
    }

    INVENTORY_LOG {
        Long id
        Long book_id
        Integer change_amount
        String reason
        Date change_date
        Date created_at
        Date updated_at
    }

    CART {
        Long id
        Long user_id
        Date created_at
    }

    CART_ITEM {
        Long id
        Long cart_id
        Long book_id
        Integer quantity
    }

    ADDRESS {
        Long id
        String street
        String city
        String postal_code
        String country
    }

    ORDER {
        Long id
        Long user_id
        Long address_id
        Date order_date
        String status
        Double total_price
        Date created_at
        Date updated_at
    }

    ORDER_ITEM {
        Long id
        Long order_id
        Long book_id
        Integer quantity
        Double price_at_purchase
    }

    PAYMENT {
        Long id
        Long order_id
        String payment_method
        String status
        Date payment_date
        Double amount
    }

    COUPON {
        Long id
        String code
        Double discount_value
        String discount_type
        Date valid_from
        Date valid_to
    }

    ORDER_COUPON {
        Long order_id
        Long coupon_id
    }

    REVIEW {
        Long id
        Long user_id
        Long book_id
        Integer rating
        String comment
        Date review_date
    }
